# car-track

./: CMakeLists.txt
include/: ShaderProgram.hpp  borders.hpp  calibration.hpp  glCamera.hpp  glUtils.hpp  markers.hpp  timer.hpp  trail.hpp  trailManager.hpp
lib/: CMakeLists.txt
shaders/: blend.frag  blit.frag  blit.vert  borderify.frag  flatify.frag  glitch.frag  stretchify.frag  texture.frag
src/: Shader.cpp  ShaderProgram.cpp  borders.cpp  calibration.cpp  glCamera.cpp  glUtils.cpp  main.cpp  markers.cpp  timer.cpp  trail.cpp  trailManager.cpp
